--- a/index.html
+++ b/index.html
@@ -13,63 +13,71 @@
         <h1 class="title">Quiz App</h1>
       </header>
     </body> 
-        <section class="quiz-card">
-            <div role="button" class="quiz-card__bookmark quiz-card__bookmark--selected" aria-label="Add bookmark"></div>
-            <p class="quiz-card__text">What property flips the axes in flexbox?</p>
-            <div class="button">
-                <button idclassonclick="my Function();">Show answer</button>
-            </div>   
-            <ul class="quiz__card__tag__list">
-                <ol>
-                    #HTML
-                </ol>
-                <ol>
-                    #flexbox
-                </ol>
-                <ol>
-                    #CSS
-                </ol>
-            </ul>
-      </section>
+ 
+    <section class="quiz-card">
+        <div role="button" class="quiz-card__bookmark quiz-card__bookmark--selected" aria-label="Add bookmark"></div>
+        <p class="quiz-card__text">What property flips the axes in flexbox?</p>
+        <div class="button">
+            <button class="button__show__answer" idclassonclick="my Function();">Show answer</button>
+        </div>   
+        <ol class="quiz__card__tag__list">
+            <li>
+                #HTML
+            </li>
+            <li>
+                #flexbox
+            </li>
+            <li>
+                #CSS
+            </li>
+        </ol>
+    </section>
 
-  <section class="quiz-card">
-    <div role="button" class="quiz-card__bookmark quiz-card__bookmark--selected" aria-label="Add bookmark"></div>
-    <p class="quiz-card__text">What property flips the axes in flexbox?</p>
-    <div class="button">
-        <button idclassonclick="my Function();">Show answer</button>
-    </div>   
-    <ul class="quiz__card__tag__list">
-        <ol>
-            #HTML
+    <section class="quiz-card">
+        <div role="button" class="quiz-card__bookmark quiz-card__bookmark--selected" aria-label="Add bookmark"></div>
+        <p class="quiz-card__text">What property flips the axes in flexbox?</p>
+        <div class="button">
+            <button class="button__show__answer" idclassonclick="my Function();">Show answer</button>
+        </div>   
+        <ol class="quiz__card__tag__list">
+            <li>
+                #HTML
+            </li>
+            <li>
+                #flexbox
+            </li>
+            <li>
+                #CSS
+            </li>
         </ol>
-        <ol>
-            #flexbox
+    </section>
+
+    <section class="quiz-card">
+        <div role="button" class="quiz-card__bookmark quiz-card__bookmark--selected" aria-label="Add bookmark"></div>
+        <p class="quiz-card__text">What property flips the axes in flexbox?</p>
+        <div class="button">
+            <button class="button__show__answer" idclassonclick="my Function();">Show answer</button>
+        </div>   
+        <ol class="quiz__card__tag__list">
+            <li>
+                #HTML
+            </li>
+            <li>
+                #flexbox
+            </li>
+            <li>
+                #CSS
+            </li>
         </ol>
-        <ol>
-            #CSS
-        </ol>
-    </ul>
-</section>
-  <section class="quiz-card">
-    <div role="button" class="quiz-card__bookmark quiz-card__bookmark--selected" aria-label="Add bookmark"></div>
-    <p class="quiz-card__text">What property flips the axes in flexbox?</p>
-    <div class="button">
-        <button idclassonclick="my Function();">Show answer</button>
-    </div>   
-    <ul class="quiz__card__tag__list">
-        <ol>
-            #HTML
-        </ol>
-        <ol>
-            #flexbox
-        </ol>
-        <ol>
-            #CSS
-        </ol>
-    </ul>
-</section>
+    </section>
+
     </main>
     <footer>
-        
+
+        <nav class="navbar">
+                <a class="navbar_home_button"><img src="/home.png"/>
+                <a class="navbar-brand"><svg width="42" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512"><!--!Font Awesome Free 6.5.1 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.--><path d="M224 256A128 128 0 1 0 224 0a128 128 0 1 0 0 256zm-45.7 48C79.8 304 0 383.8 0 482.3C0 498.7 13.3 512 29.7 512H418.3c16.4 0 29.7-13.3 29.7-29.7C448 383.8 368.2 304 269.7 304H178.3z"/></svg></a>
+                <a class="navbar-brand"></a>
+          </nav>
     </footer>
 </html>
